--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -13,6 +13,9 @@
         </p>
         <p>
             {{ post.body|linebreaks }}
+        </p>
+        <p>
+            <a href="{% url 'blog:post_share' post.id %}">Share this post</a>
         </p>    
     </div><!-- /.blog-post -->
    
