--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -2,45 +2,53 @@
 
 {% block title %}My Blog{% endblock %}
 
-{% block content %}    
-    {% for post in posts %}
-        <div class="blog-post">
-            <h2 class="blog-post-title">
-                <a href="{{ post.get_absolute_url }}">
-                    {{ post.title }}
-                </a>
-            </h2>
-            <p class="date">
-                Published {{ post.publish }} by {{ post.author }}
-            </p>
-            <p>
-                {{ post.body|truncatewords:30|linebreaks }}
-            </p>    
-        </div><!-- /.blog-post -->
-    {% endfor %}
+{% block content %}
+  {% if tag %}
+    <h2>Posts tagged with "{{ tag.name }}"</h2>
+  {% endif %}
 
-    <!-- {% include 'blog/pagination.html' with page=posts %} -->
-    {% include 'blog/pagination.html' with page=page_obj %}
+  {% for post in posts %}
+      <div class="blog-post">
+          <h2 class="blog-post-title">
+              <a href="{{ post.get_absolute_url }}">
+                  {{ post.title }}
+              </a>
+          </h2>
+          {% for tag in post.tags.all %}
+            <a href="{% url 'blog:post_list_by_tag' tag.slug %}"><span class="badge badge-pill badge-primary">{{ tag.name }}</span></a>
+          {% endfor %}
+          <!-- <p>Tags: {{ post.tags.all|join:", "}}</p> -->
+          <p class="date">
+              Published {{ post.publish }} by {{ post.author }}
+          </p>
+          <p>
+              {{ post.body|truncatewords:30|linebreaks }}
+          </p>    
+      </div><!-- /.blog-post -->
+  {% endfor %}
 
-    <!-- <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-    </nav> -->
+  {% include 'blog/pagination.html' with page=posts %}
+  <!-- {% include 'blog/pagination.html' with page=page_obj %} -->
+
+  <!-- <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+  </nav> -->
 
 {% endblock content %}
 
