--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -19,6 +19,15 @@
         </p>    
     </div><!-- /.blog-post -->
 
+    <h2>Similar posts</h2>
+    {% for post in similar_posts %}
+        <p>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </p>
+    {% empty%}
+        There are no similar posts yet.
+    {% endfor %}
+
     {% with comments.count as total_comments %}
         <h2>
             {{ total_comments }} comment{{ total_comments|pluralize }}
@@ -35,6 +44,8 @@
         {% empty %}
             <p>There are no comments yet.</p>
     {% endfor %}
+
+
 
     {% if new_comment %}
         <h2>Your comment has been added.</h2>
