--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load blog_tags %}
 
 {% block title %}My Blog{% endblock %}
 
@@ -22,7 +23,7 @@
               Published {{ post.publish }} by {{ post.author }}
           </p>
           <p>
-              {{ post.body|truncatewords:30|linebreaks }}
+              {{ post.body|markdown|truncatewords_html:30 }}
           </p>    
       </div><!-- /.blog-post -->
   {% endfor %}
