--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 <aside class="col-md-4 blog-sidebar">
     <div class="p-4 mb-3 bg-light rounded">
       <h4 class="font-italic">About</h4>
@@ -6,20 +7,8 @@
 
     <div class="p-4">
       <h4 class="font-italic">Archives</h4>
-      <ol class="list-unstyled mb-0">
-        <li><a href="#">March 2014</a></li>
-        <li><a href="#">February 2014</a></li>
-        <li><a href="#">January 2014</a></li>
-        <li><a href="#">December 2013</a></li>
-        <li><a href="#">November 2013</a></li>
-        <li><a href="#">October 2013</a></li>
-        <li><a href="#">September 2013</a></li>
-        <li><a href="#">August 2013</a></li>
-        <li><a href="#">July 2013</a></li>
-        <li><a href="#">June 2013</a></li>
-        <li><a href="#">May 2013</a></li>
-        <li><a href="#">April 2013</a></li>
-      </ol>
+      <p>This is my blog. I've written {% total_posts %} posts so far.<p>
+        {% show_latest_posts 3 %}
     </div>
 
     <div class="p-4">
