--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -8,7 +8,10 @@
     <div class="p-4">
       <h4 class="font-italic">Archives</h4>
       <p>This is my blog. I've written {% total_posts %} posts so far.<p>
-        {% show_latest_posts 3 %}
+      <p>
+        <a href="{% url "blog:post_feed" %}">Subscribe to my RSS feed</a>
+      </p>
+      {% show_latest_posts 3 %}
     </div>
 
     <div class="p-4">
